--- a/stocksio/main/templates/main/index.html
+++ b/stocksio/main/templates/main/index.html
@@ -27,6 +27,24 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{% static 'main/img/apple-touch-icon.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{% static 'main/img/favicon-32x32.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{% static 'main/img/favicon-16x16.png' %}"
+    />
+    <link rel="manifest" href="{% static 'main/img/site.webmanifest' %}" />
     <style>
       .text {
         text-align: center;
@@ -98,9 +116,7 @@
             {{stocks.name}}
           </td>
           <td>{{stocks.symbol}}</td>
-          <td>
-            <a href="{% url 'values' %}" class="link-success">Цена</a>
-          </td>
+          <td>{{stocks.fair_value}}</td>
           {% endfor %}
         </tr>
       </tbody>
